--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".MainMenu"
-    android:background="#000000">
+    android:background="@color/colorPrimaryDark"
+    tools:context=".MainMenu">
     >
 
     <ImageView
