--- a/app/src/main/res/layout/activity_select_difficulty.xml
+++ b/app/src/main/res/layout/activity_select_difficulty.xml
@@ -142,5 +142,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnJediMasterDifficulty" />
+    <LinearLayout
+        android:id="@+id/linearLayoutProgress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#B0000000"
+        android:gravity="center_vertical|center_horizontal|center"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="0dp">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center_vertical|center_horizontal|center" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
