--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -11,10 +11,10 @@
     <ImageView
         android:id="@+id/imgTaken"
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="8dp"
         android:onClick="imageViewIsClicked"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/placeholder" />
@@ -23,6 +23,8 @@
         android:id="@+id/txtState"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center_horizontal"
@@ -30,9 +32,9 @@
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgTaken"
-        app:layout_constraintVertical_bias="0.185"
-        tools:layout_editor_absoluteX="62dp" />
+        app:layout_constraintVertical_bias="0.117" />
 
     <Button
         android:id="@+id/btnNextPlant"
@@ -46,25 +48,26 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
+        android:text="next question"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.448"
+        app:layout_constraintHorizontal_bias="0.901"
         app:layout_constraintStart_toEndOf="@+id/imgTaken"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.34"
+        app:layout_constraintVertical_bias="0.559"
         app:srcCompat="@android:drawable/btn_dialog" />
 
     <TextView
         android:id="@+id/txtWrongAnswers"
         android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="left"
-        android:text="WRONG"
+        android:text="wrong answers"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +86,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="right"
-        android:text="RIGHT"
+        android:text="right answers"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,6 +120,7 @@
                 android:id="@+id/button1"
                 android:layout_width="150dp"
                 android:layout_height="70dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/answerbox"
                 android:onClick="button1IsClicked"
                 android:textColor="#FFFFFF" />
@@ -125,10 +129,10 @@
                 android:id="@+id/button2"
                 android:layout_width="150dp"
                 android:layout_height="70dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/answerbox"
                 android:onClick="button2IsClicked"
                 android:textColor="#FFFFFF" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -140,6 +144,7 @@
                 android:id="@+id/button3"
                 android:layout_width="150dp"
                 android:layout_height="70dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/answerbox"
                 android:onClick="button3IsClicked"
                 android:textColor="#FFFFFF" />
@@ -148,6 +153,7 @@
                 android:id="@+id/button4"
                 android:layout_width="150dp"
                 android:layout_height="70dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/answerbox"
                 android:onClick="button4IsClicked"
                 android:textColor="#FFFFFF" />
