--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -65,7 +65,7 @@
         android:background="@drawable/start"
         android:gravity="center_horizontal|center"
         android:onClick="startGame"
-        app:layout_constraintBottom_toTopOf="@+id/btnHelp"
+        app:layout_constraintBottom_toTopOf="@+id/btnProfile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -85,7 +85,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btnQuitGame"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnHelp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnProfile" />
 
     <ImageButton
         android:id="@+id/btnQuitGame"
@@ -98,6 +98,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/quit"
         android:gravity="center_horizontal|center"
+        android:onClick="quitGame"
         android:text="Quit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,15 +107,16 @@
         app:layout_constraintTop_toBottomOf="@+id/btnOptions" />
 
     <ImageButton
-        android:id="@+id/btnHelp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btnProfile"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/help"
+        android:background="@drawable/profile"
         android:gravity="center_horizontal|center"
+        android:onClick="openProfile"
         android:text="Help"
         app:layout_constraintBottom_toTopOf="@+id/btnOptions"
         app:layout_constraintEnd_toEndOf="parent"
