--- a/app/src/main/res/layout/activity_select_difficulty.xml
+++ b/app/src/main/res/layout/activity_select_difficulty.xml
@@ -6,34 +6,43 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="72dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnPadawanDifficulty"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/difficulity" />
+
     <ImageButton
         android:id="@+id/btnPadawanDifficulty"
         android:layout_width="230dp"
-        android:layout_height="64dp"
+        android:layout_height="41dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@color/colorPrimaryDark"
         android:contentDescription="@string/padawan_difficulty"
         android:onClick="onClickEasyDifficulty"
-        app:layout_constraintBottom_toTopOf="@+id/btnJediDifficulty"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/difficulity_0" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@drawable/padawan" />
 
     <TextView
         android:id="@+id/txtPadawanDifficulty"
-        android:layout_width="wrap_content"
+        android:layout_width="232dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:onClick="onClickEasyDifficulty"
         android:text="@string/padawan_difficulty"
         android:textColor="@color/colorAccent"
         android:textSize="14sp"
@@ -43,32 +52,32 @@
 
     <ImageButton
         android:id="@+id/btnJediDifficulty"
-        android:layout_width="134dp"
-        android:layout_height="65dp"
+        android:layout_width="184dp"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="20dp"
         android:background="@color/colorPrimaryDark"
         android:contentDescription="@string/jedi_difficulty"
         android:onClick="onClickNormalDifficulty"
         app:layout_constraintBottom_toTopOf="@+id/btnJediKnightDifficulty"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnPadawanDifficulty"
-        app:srcCompat="@drawable/difficulity_1" />
+        app:srcCompat="@drawable/jedi" />
 
     <TextView
         android:id="@+id/txtJediDifficulty"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="52dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:onClick="onClickNormalDifficulty"
         android:text="@string/jedi_difficulty"
         android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,13 +87,12 @@
     <ImageButton
         android:id="@+id/btnJediKnightDifficulty"
         android:layout_width="262dp"
-        android:layout_height="54dp"
+        android:layout_height="39dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@color/colorPrimaryDark"
         android:contentDescription="@string/jedi_knight_difficulty"
         android:onClick="onClickHardDifficulty"
@@ -92,21 +100,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnJediDifficulty"
-        app:srcCompat="@drawable/difficulity_2" />
+        app:srcCompat="@drawable/jediknight" />
 
     <TextView
         android:id="@+id/txtJediKnightDifficulty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="263dp"
+        android:layout_height="49dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:onClick="onClickHardDifficulty"
         android:text="@string/jedi_knight_difficulty"
         android:textColor="@color/colorAccent"
+        app:layout_constraintBottom_toTopOf="@+id/btnJediMasterDifficulty"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnJediKnightDifficulty" />
+        app:layout_constraintTop_toBottomOf="@+id/btnJediKnightDifficulty"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/btnJediMasterDifficulty"
@@ -117,31 +130,35 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="32dp"
         android:background="@color/colorPrimaryDark"
         android:contentDescription="@string/jedi_master_difficulty"
         android:onClick="onClickVeryHardDifficulty"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnJediKnightDifficulty"
         app:layout_constraintVertical_bias="0.095"
-        app:srcCompat="@drawable/difficulity_3" />
+        app:srcCompat="@drawable/jedimaster" />
 
     <TextView
         android:id="@+id/txtJediMasterDifficulty"
-        android:layout_width="wrap_content"
+        android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:onClick="onClickVeryHardDifficulty"
         android:text="@string/jedi_master_difficulty"
         android:textColor="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnJediMasterDifficulty" />
+        app:layout_constraintTop_toBottomOf="@+id/btnJediMasterDifficulty"
+        app:layout_constraintVertical_bias="0.0" />
+
     <LinearLayout
         android:id="@+id/linearLayoutProgress"
         android:layout_width="match_parent"
@@ -149,8 +166,11 @@
         android:background="#B0000000"
         android:gravity="center_vertical|center_horizontal|center"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -158,5 +178,15 @@
             android:layout_width="200dp"
             android:layout_height="150dp"
             android:layout_gravity="center_vertical|center_horizontal|center" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="85dp"
+            android:background="@drawable/downloadingdata"
+            android:gravity="center"
+            android:textSize="18sp" />
+
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
